--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "4.3.1",
     "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^2.2.1",
+    "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-devtools": "^4.2.0",
     "react-dom": "^16.10.2",
