--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "bootstrap": "4.3.1",
     "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-devtools": "^4.2.0",
     "react-dom": "^16.10.2",
+    "react-event-calendar": "^0.3.0",
     "react-redux": "^7.1.1",
+    "react-responsive-carousel": "^3.1.50",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
