--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
+    "react-add-to-calendar": "^0.1.5",
     "react-addons-css-transition-group": "^15.6.2",
     "react-devtools": "^4.2.0",
     "react-dom": "^16.10.2",
     "react-event-calendar": "^0.3.0",
+    "react-icons": "^3.7.0",
     "react-redux": "^7.1.1",
     "react-responsive-carousel": "^3.1.50",
     "react-router": "^5.1.2",
