--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react-transition-group": "^4.2.3",
+    "axios": "^0.19.0",
     "bootstrap": "4.3.1",
     "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^2.2.1",
@@ -22,6 +23,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
+    "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^4.3.0",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
