--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^4.3.0",
