--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@types/react-transition-group": "^4.2.4",
+    "acorn": "^7.1.1",
     "axios": "^0.19.2",
     "bootstrap": "4.3.1",
     "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^2.2.1",
+    "kind-of": "^6.0.3",
+    "minimist": "^1.2.5",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
