--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.2",
     "bootstrap": "4.5.0",
     "es6-promise": "^4.2.8",
+    "http-proxy": "^1.18.1",
     "isomorphic-fetch": "^2.2.1",
     "kind-of": "^6.0.3",
     "moment": "^2.27.0",
