--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "isomorphic-fetch": "^2.2.1",
     "kind-of": "^6.0.3",
     "moment": "^2.27.0",
+    "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-add-to-calendar": "^0.1.5",
@@ -32,7 +33,8 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
     "redux-starter-kit": "^2.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yargs-parser": "^20.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
